# ARTemplate

./: CMakeLists.txt  Readme.md
include/: ARModule.h  BackgroundVideo.h  Timer.h
modules/: SphereModule.cpp  SphereModule.h
modules/nbody/: Integrator.cpp  Integrator.h  NBodyARModule.cpp  NBodyARModule.h  Physics.cpp  Physics.h
src/: BackgroundVideo.cpp  Main.cpp  Timer.cpp
